Added font awesome

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/400d894e6e.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,6 +30,6 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <p class="bg-warning">Hi you</p>
+    <p class="bg-warning">Hi you <i class="fa-brands fa-instagram"></i></p>
   </body>
 </html>
