Added header section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <p class="bg-warning">Hi you <i class="fa-brands fa-instagram"></i></p>
+    <div class="hero">
+      <p>Fitness and Nutrition blog</p>
+      <h1>Kerry Murphy</h1>
+      <h2 class="mb-3">Hybrid (scaled) athlete</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
