Added home page

--- a/index.html
+++ b/index.html
@@ -37,5 +37,86 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <div class="container">
+      <div class="row pt-2">
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/257/original/331443612_1152525982125157_2975261022511951033_n.jpg?1676826803"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/241/original/327049514_748816473158165_7074150858202062956_n.jpg?1676825122"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/239/original/327016986_772554027915449_5807713128916859690_n.jpg?1676825098"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/256/original/329728202_6214949668525570_5242167482273594274_n.jpg?1676826794"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/060/573/original/320918940_6114614268549989_8301954708293557456_n.jpg?1672259101"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/247/original/326865099_755616935810282_2287270110502389327_n.jpg?1676825948"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+      </div>
+      <div class="row pt-2 pb-2">
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/258/original/326983171_1413044386108642_5187143297177201688_n.jpg?1676826815"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/260/original/326981880_1421760828357740_8768156143556496711_n.jpg?1676826825"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/261/original/326973056_3528850350768880_4852115552033114191_n.jpg?1676826838"
+            alt=""
+            class="img-fluid border border-secondary p-3 shadow"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>
+        Kerry Murphy
+        <span class="logos d-block">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i
+          ><i class="fa-brands fa-youtube"></i>
+        </span>
+      </p>
+    </div>
   </body>
 </html>
