Add images for comp page

--- a/comps.html
+++ b/comps.html
@@ -29,12 +29,43 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="content container">
-      <div class="row">
-        <div class="col-6 d-none d-md-block"></div>
-        <div class="col-md-6">
-          <h6>ABOUT ME</h6>
-          <h1>Kerry Murphy</h1>
+    <div class="content container d-flex justify-content-center">
+      <div class="row text-center">
+        <h6>Competitons</h6>
+        <h1 class="mb-5">Kerry Murphy</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/712/original/327775056_5784949608219660_5957169022929472143_n.jpg?1677092847"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3>Talisman Individuals</h3>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/710/original/327288791_753395263095965_721988915452975161_n.jpg?1677092640"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3>CrossFit Open 2023</h3>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/239/original/327016986_772554027915449_5807713128916859690_n.jpg?1676825098"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3>Same Sex Pairs</h3>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/711/original/331145170_1144646059555837_4187827620209398827_n.jpg?1677092672"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3>Halloween Randomers Comp</h3>
+          </div>
         </div>
       </div>
     </div>
