Added nav to home page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container"></div>
+    <nav class="d-flex justify-content-around">
+        <ul>
+          <li class="active">
+          <a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/comps.html">Comps</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    </div>
     <div class="hero">
       <p>Fitness and Nutrition blog</p>
       <h1>Kerry Murphy</h1>
