--- a/index.html
+++ b/index.html
@@ -29,23 +29,25 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container"></div>
-    <nav class="d-flex justify-content-around">
+    <div class="container">
+      <nav class="d-flex justify-content-around">
         <ul>
           <li class="active">
-          <a href="/">Home</a></li>
+            <a href="/">Home</a>
+          </li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/comps.html">Comps</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>
-    </div>
-    <div class="hero">
-      <p>Fitness and Nutrition blog</p>
-      <h1>Kerry Murphy</h1>
-      <h2 class="mb-3">Hybrid (scaled) athlete</h2>
-      <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+      </nav>
+
+      <div class="hero">
+        <p>Fitness and Nutrition blog</p>
+        <h1>Kerry Murphy</h1>
+        <h2 class="mb-3">Hybrid (scaled) athlete</h2>
+        <div>
+          <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -118,16 +120,27 @@
           />
         </div>
       </div>
-    </div>
-    <div class="footer">
-      <p>
-        Kerry Murphy
-        <span class="logos d-block">
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook"></i
-          ><i class="fa-brands fa-youtube"></i>
-        </span>
-      </p>
+      <div class="footer">
+        <div class="contact-box justify-content-between d-none d-md-flex">
+          <div>
+            <h4>Ask me anything</h4>
+            <p>Fitness and nutrition enquiries welcome</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="email-link">
+            <a href="mailto:kerryme2@hotmail.com">Email me</a>
+          </div>
+        </div>
+        <div class="logos d-flex justify-content-center">
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
