Made site SEO friendly and added footer and header to all pages

--- a/about.html
+++ b/about.html
@@ -26,19 +26,41 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Kerry Murphy the CrossFitter that runs - about page"
+    />
+    <title>Crossfitter and Runner - Kerry - about page</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-around">
+        <ul>
+          <li>
+            <a href="/" title="Home Page">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About page">About</a>
+          </li>
+          <li>
+            <a href="/comps.html" title="competition page">Comps</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="about-hero container">
       <div class="row">
         <div class="col-6 d-none d-md-block">
           <img
             src="/images/331443612_1152525982125157_2975261022511951033_n.jpg"
-            alt=""
+            alt="Kerry in a sports bra"
             class="img-fluid about-img"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 about-content">
           <h6>ABOUT ME</h6>
           <h1>Kerry Murphy</h1>
           <p>
@@ -50,8 +72,59 @@
             anything fitness please drop me a message.
           </p>
           <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a
+              href="mailto:kerryme2@hotmail.com"
+              class="btn btn-branding"
+              title="contact me"
+              >Contact me</a
+            >
           </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="contact-box justify-content-between d-none d-md-flex">
+          <div>
+            <h4>Ask me anything</h4>
+            <p>Fitness and nutrition enquiries welcome</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding" title="contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="email-link">
+            <a href="mailto:kerryme2@hotmail.com" title="email me">Email me</a>
+          </div>
+        </div>
+        <div class="logos d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/kerrigan__1337/"
+            title="instagram"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/kerrymexx"
+            title="facebook"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/@needsmorebarbell1581"
+            target="_blank"
+            title="youtube"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+        <div>
+          <p class="text-light text-center">
+            This project was coded by
+            <a href="https://github.com/Kerrigan1337" class="coded-by"
+              >Kerry Murphy</a
+            >
+          </p>
         </div>
       </div>
     </div>
