--- a/comps.html
+++ b/comps.html
@@ -26,46 +26,114 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Kerry Murphy the CrossFitter that runs - comp page"
+    />
+    <title>Crossfitter and Runner - Kerry - comps page</title>
   </head>
   <body>
-    <div class="content container d-flex justify-content-center">
-      <div class="row text-center">
-        <h6>Competitons</h6>
-        <h1 class="mb-5">Kerry Murphy</h1>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/712/original/327775056_5784949608219660_5957169022929472143_n.jpg?1677092847"
-              alt=""
-              class="img-fluid rounded"
-            />
-            <h3>Talisman Individuals</h3>
+    <div class="container">
+      <nav class="d-flex justify-content-around">
+        <ul>
+          <li>
+            <a href="/" title="Home Page">Home</a>
+          </li>
+          <li><a href="/about.html" title="About page">About</a></li>
+          <li class="active">
+            <a href="/comps.html" title="competition page">Comps</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container">
+      <div class="content container d-flex justify-content-center">
+        <div class="row text-center">
+          <h6>Competitons</h6>
+          <h1 class="mb-5">Kerry Murphy</h1>
+          <div class="row">
+            <div class="col-md-6">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/712/original/327775056_5784949608219660_5957169022929472143_n.jpg?1677092847"
+                alt="Kerry at talisman individuals"
+                class="img-fluid rounded"
+              />
+              <h3>Talisman Individuals</h3>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/710/original/327288791_753395263095965_721988915452975161_n.jpg?1677092640"
+                alt="Kerry at CF open 23.1"
+                class="img-fluid rounded"
+              />
+              <h3>CrossFit Open 2023</h3>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/239/original/327016986_772554027915449_5807713128916859690_n.jpg?1676825098"
+                alt="Kerry at same sex pairs"
+                class="img-fluid rounded"
+              />
+              <h3>Same Sex Pairs</h3>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/711/original/331145170_1144646059555837_4187827620209398827_n.jpg?1677092672"
+                alt="Kerry at halloween fun comp"
+                class="img-fluid rounded"
+              />
+              <h3>Halloween Randomers Comp</h3>
+            </div>
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/710/original/327288791_753395263095965_721988915452975161_n.jpg?1677092640"
-              alt=""
-              class="img-fluid rounded"
-            />
-            <h3>CrossFit Open 2023</h3>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="contact-box justify-content-between d-none d-md-flex">
+          <div>
+            <h4>Ask me anything</h4>
+            <p>Fitness and nutrition enquiries welcome</p>
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/239/original/327016986_772554027915449_5807713128916859690_n.jpg?1676825098"
-              alt=""
-              class="img-fluid rounded"
-            />
-            <h3>Same Sex Pairs</h3>
+          <div>
+            <a href="/contact.html" class="btn btn-branding" title="contact me"
+              >Contact me</a
+            >
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/711/original/331145170_1144646059555837_4187827620209398827_n.jpg?1677092672"
-              alt=""
-              class="img-fluid rounded"
-            />
-            <h3>Halloween Randomers Comp</h3>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="email-link">
+            <a href="mailto:kerryme2@hotmail.com" title="email me">Email me</a>
           </div>
+        </div>
+        <div class="logos d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/kerrigan__1337/"
+            title="instagram"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/kerrymexx"
+            title="facebook"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/@needsmorebarbell1581"
+            target="_blank"
+            title="youtube"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+        <div>
+          <p class="text-light text-center">
+            This project was coded by
+            <a href="https://github.com/Kerrigan1337" class="coded-by"
+              >Kerry Murphy</a
+            >
+          </p>
         </div>
       </div>
     </div>
