--- a/contact.html
+++ b/contact.html
@@ -26,27 +26,95 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Kerry Murphy the CrossFitter that runs - contact page"
+    />
+    <title>Crossfitter and Runner - Kerry - contact page</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-around">
+        <ul>
+          <li>
+            <a href="/" title="Home Page">Home</a>
+          </li>
+          <li><a href="/about.html" title="About page">About</a></li>
+          <li><a href="/comps.html" title="competition page">Comps</a></li>
+          <li class="active">
+            <a href="/contact.html" title="Contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content container">
       <h1>Contact me</h1>
       <h3>Email</h3>
       <p>
-        <a href="mailto:Kerryme2@hotmail.com" target="_blank"
+        <a href="mailto:Kerryme2@hotmail.com" title="contact me" target="_blank"
           >Kerryme2@hotmail.com</a
         >
       </p>
       <h3>Instagram</h3>
-      <a href="https://www.instagram.com/kerrigan__1337/" target="_blank"
+      <a
+        href="https://www.instagram.com/kerrigan__1337/"
+        title="instagram"
+        target="_blank"
         >@Kerrigan__1337</a
       >
       <h3>Youtube</h3>
       <a
         href="https://www.youtube.com/channel/UCun8GbLQ1Opcivjx-ortllQ"
+        title="youtube"
         target="_blank"
         >@needsmorebarbell1581</a
       >
+      <div class="footer">
+        <div class="contact-box justify-content-between d-none d-md-flex">
+          <div>
+            <h4>Ask me anything</h4>
+            <p>Fitness and nutrition enquiries welcome</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding" title="contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="email-link">
+            <a href="mailto:kerryme2@hotmail.com" title="email me">Email me</a>
+          </div>
+        </div>
+        <div class="logos d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/kerrigan__1337/"
+            title="instagram"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/kerrymexx"
+            title="facebook"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/@needsmorebarbell1581"
+            target="_blank"
+            title="youtube"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+        <div>
+          <p class="text-light text-center">
+            This project was coded by
+            <a href="https://github.com/Kerrigan1337" class="coded-by"
+              >Kerry Murphy</a
+            >
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
