--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Kerry Murphy the CrossFitter that runs home page"
+    />
+    <title>Crossfitter and Runner - Kerry - home page</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-around">
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Home Page">Home</a>
           </li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/comps.html">Comps</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/about.html" title="About page">About</a></li>
+          <li><a href="/comps.html" title="competition page">Comps</a></li>
+          <li><a href="/contact.html" title="Contact page">Contact</a></li>
         </ul>
       </nav>
 
@@ -46,7 +50,9 @@
         <h1>Kerry Murphy</h1>
         <h2 class="mb-3">Hybrid (scaled) athlete</h2>
         <div>
-          <a href="#" class="btn btn-branding">Contact me</a>
+          <a href="/contact.html" class="btn btn-branding" title="contact me"
+            >Contact me</a
+          >
         </div>
       </div>
     </div>
@@ -55,21 +61,21 @@
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/257/original/331443612_1152525982125157_2975261022511951033_n.jpg?1676826803"
-            alt=""
+            alt="Kerry in a sports bra"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/241/original/327049514_748816473158165_7074150858202062956_n.jpg?1676825122"
-            alt=""
+            alt="Kerry at pairs comp"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/239/original/327016986_772554027915449_5807713128916859690_n.jpg?1676825098"
-            alt=""
+            alt="Kerry at pairs comp 2"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
@@ -78,21 +84,21 @@
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/256/original/329728202_6214949668525570_5242167482273594274_n.jpg?1676826794"
-            alt=""
+            alt="Kerry at pairs comp 3"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/060/573/original/320918940_6114614268549989_8301954708293557456_n.jpg?1672259101"
-            alt=""
+            alt="Kerry and Alex at Saturday pairs wod"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/247/original/326865099_755616935810282_2287270110502389327_n.jpg?1676825948"
-            alt=""
+            alt="Kerry Flexing"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
@@ -101,21 +107,21 @@
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/258/original/326983171_1413044386108642_5187143297177201688_n.jpg?1676826815"
-            alt=""
+            alt="Kerry doing wall walks - open practice"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/260/original/326981880_1421760828357740_8768156143556496711_n.jpg?1676826825"
-            alt=""
+            alt="Kerry doing a rope climb"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
         <div class="col-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/068/261/original/326973056_3528850350768880_4852115552033114191_n.jpg?1676826838"
-            alt=""
+            alt="Kerry doing power clean in open workout 23.1"
             class="img-fluid border border-secondary p-3 shadow"
           />
         </div>
@@ -127,18 +133,43 @@
             <p>Fitness and nutrition enquiries welcome</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding" title="contact me"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center">
           <div class="email-link">
-            <a href="mailto:kerryme2@hotmail.com">Email me</a>
+            <a href="mailto:kerryme2@hotmail.com" title="email me">Email me</a>
           </div>
         </div>
         <div class="logos d-flex justify-content-center">
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
-          <a href=""><i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a
+            href="https://www.instagram.com/kerrigan__1337/"
+            title="instagram"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/kerrymexx"
+            title="facebook"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/@needsmorebarbell1581"
+            target="_blank"
+            title="youtube"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+        <div>
+          <p class="text-light text-center">
+            This project was coded by
+            <a href="https://github.com/Kerrigan1337" class="coded-by"
+              >Kerry Murphy</a
+            >
+          </p>
         </div>
       </div>
     </div>
