Added link to project

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
         <div>
           <p class="text-light text-center">
             This project was coded by
-            <a href="https://github.com/Kerrigan1337" class="coded-by"
+            <a
+              href="https://github.com/Kerrigan1337/Fitness-Portfolio"
+              class="coded-by"
               >Kerry Murphy</a
             >
           </p>
